# ch32v003-cmake-vsc-noos-template

./: CMakeLists.txt  README.md
cmake/: toolchain-ch32v20x.cmake
src/: main.c
wch/: CMakeLists.txt
wch/Ld/: Link.ld
wch/hal_libraries/bmsis/: CMakeLists.txt
wch/hal_libraries/ch32v003_hal/: CMakeLists.txt
wch/hal_libraries/ch32v203_hal/: CMakeLists.txt
